--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my simple website</title>
-</head>
-<body>
-    
-
-
-</body>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <div>
+      <h3>My first website</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio asperiores
+        modi delectus quaerat incidunt placeat, mollitia, ab ratione facere est
+        voluptates quasi illum doloremque nobis.
+      </p>
+    </div>
+  </body>
 </html>
